fix: remove line break in memeber names on small screens

--- a/assets/css/sections/about/_team.scss
+++ b/assets/css/sections/about/_team.scss
@@ -19,6 +19,10 @@
   font-size: 1.5em;
   font-weight: 300;
   padding: 10px;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .row.heading-guest {
